# ffmpeg_stream_reader

./: CMakeLists.txt  README.md  ffmpeg_decoder.cpp  ffmpeg_decoder.sln  ffmpeg_decoder.vcxproj  ffmpeg_decoder.vcxproj.filters  ffmpeg_stream_demo.cpp  main.cpp  netstream_pusher.cpp  netstream_pusher.h  netstream_reader.cpp  netstream_reader.h  netstream_reader_ffmpeg.cpp  netstream_reader_ffmpeg.h  netstream_reader_udp.cpp  netstream_reader_udp.h  singleton_template.h
